# zephyr

./: west.yml
app/machine/sec_cmu610/: CMakeLists.txt  main.c
arch/riscv/: Kconfig.isa
drivers/: Kconfig
drivers/cache/: CMakeLists.txt  Kconfig  Kconfig.linkedsemi  cache_linkedsemi.c
drivers/clock_control/: CMakeLists.txt  Kconfig  Kconfig.ls  clock_control_ls.c
drivers/crypto/: CMakeLists.txt  Kconfig  Kconfig.linkedsemi  crypto_linkedsemi.c
drivers/espi/: CMakeLists.txt  Kconfig  Kconfig.ls  espi_ls.c
drivers/ethernet/: CMakeLists.txt  Kconfig.dwmac  eth_dwmac.c  eth_dwmac_linkedsemi.c
drivers/flash/: CMakeLists.txt  Kconfig  Kconfig.linkedsemi  Kconfig.ls  soc_flash_linkedsemi.c  soc_flash_ls.c
drivers/gpio/: CMakeLists.txt  Kconfig  Kconfig.ls  Kconfig.lsqsh  gpio_ls.c  gpio_lsqsh.c
drivers/i2c/: CMakeLists.txt  Kconfig  Kconfig.le501x  Kconfig.ls  i2c_le501x.c  i2c_ls.c
drivers/kcs/: CMakeLists.txt  Kconfig  Kconfig.ls  kcs_ls.c
drivers/lpc/: CMakeLists.txt  Kconfig  Kconfig.ls  lpc_ls.c
drivers/mbox/: CMakeLists.txt  Kconfig  Kconfig.linkedsemi  mbox_linkedsemi.c
drivers/mdio/: CMakeLists.txt  Kconfig  Kconfig.dwmac  mdio_dwmac.c  mdio_shell.c
drivers/misc/: CMakeLists.txt  Kconfig
drivers/peci/: CMakeLists.txt  Kconfig  Kconfig.ls  peci_ls.c
drivers/pinctrl/: CMakeLists.txt  Kconfig  Kconfig.ls  Kconfig.lsqsh  pinctrl_ls.c  pinctrl_lsqsh.c
drivers/sdhc/: CMakeLists.txt  Kconfig  Kconfig.linkedsemi  sdhci-of-linkedsemi.c  sdhci.c  sdhci.h
drivers/serial/: CMakeLists.txt  Kconfig  Kconfig.le501x  Kconfig.linkedsemi  (+3 more)
(+204 files in other folders)
